<resources>
    <string name="app_name">Movie Ratings</string>

    <string name="no_movies">No movies :(</string>

    <string name="bottom_nav_popular">Popular</string>
    <string name="bottom_nav_top">Top</string>
    <string name="bottom_nav_favorite">Favorites</string>

    <string name="play_video">Play Video</string>
    <string name="label_back">Back</string>
</resources>
