<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/moviePoster"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:src="@drawable/movie_poster"
        android:contentDescription="@string/poster_description"
        android:cropToPadding="true"
        android:adjustViewBounds="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/debugText"
        android:visibility="gone"/>

</FrameLayout>
